exports[`invalid(1): a { b {} color: red; } 1`] = `

  1 | a { b {} color: red; }

`;

exports[`invalid(1): a { b {} color: red; } 2`] = `

Message:
> 1 | a { b {} color: red; }
    |          ^^^^^^^^^^ Do not place declarations after nested rules.

`;

exports[`invalid(10): a {\n\t@media (width > 0px) {\n\t\tb {}\n\t\tcolor: red;\n\t}\n} 1`] = `

  1 | a {
  2 | 	@media (width > 0px) {
  3 | 		b {}
  4 | 		color: red;
  5 | 	}
  6 | }

`;

exports[`invalid(10): a {\n\t@media (width > 0px) {\n\t\tb {}\n\t\tcolor: red;\n\t}\n} 2`] = `

Message:
  1 | a {
  2 | 	@media (width > 0px) {
  3 | 		b {}
> 4 | 		color: red;
    | 		^^^^^^^^^^ Do not place declarations after nested rules.
  5 | 	}
  6 | }

`;

exports[`invalid(11): .message {\n\t@media (width >= 600px) {\n\t\tpadding: 16px;\n\t}\n\n\t/* Keep this comment. */\n\tpadding: 8px;\n} 1`] = `

  1 | .message {
  2 | 	@media (width >= 600px) {
  3 | 		padding: 16px;
  4 | 	}
  5 |
  6 | 	/* Keep this comment. */
  7 | 	padding: 8px;
  8 | }

`;

exports[`invalid(11): .message {\n\t@media (width >= 600px) {\n\t\tpadding: 16px;\n\t}\n\n\t/* Keep this comment. */\n\tpadding: 8px;\n} 2`] = `

Message:
  1 | .message {
  2 | 	@media (width >= 600px) {
  3 | 		padding: 16px;
  4 | 	}
  5 |
  6 | 	/* Keep this comment. */
> 7 | 	padding: 8px;
    | 	^^^^^^^^^^^^ Do not place declarations after nested rules.
  8 | }

`;

exports[`invalid(2): a { & {} color: red; } 1`] = `

  1 | a { & {} color: red; }

`;

exports[`invalid(2): a { & {} color: red; } 2`] = `

Message:
> 1 | a { & {} color: red; }
    |          ^^^^^^^^^^ Do not place declarations after nested rules.

`;

exports[`invalid(3): a { @media (width > 0px) {} color: red; } 1`] = `

  1 | a { @media (width > 0px) {} color: red; }

`;

exports[`invalid(3): a { @media (width > 0px) {} color: red; } 2`] = `

Message:
> 1 | a { @media (width > 0px) {} color: red; }
    |                             ^^^^^^^^^^ Do not place declarations after nested rules.

`;

exports[`invalid(4): a { @starting-style {} color: red; } 1`] = `

  1 | a { @starting-style {} color: red; }

`;

exports[`invalid(4): a { @starting-style {} color: red; } 2`] = `

Message:
> 1 | a { @starting-style {} color: red; }
    |                        ^^^^^^^^^^ Do not place declarations after nested rules.

`;

exports[`invalid(5): a { @unknown {} color: red; } 1`] = `

  1 | a { @unknown {} color: red; }

`;

exports[`invalid(5): a { @unknown {} color: red; } 2`] = `

Message:
> 1 | a { @unknown {} color: red; }
    |                 ^^^^^^^^^^ Do not place declarations after nested rules.

`;

exports[`invalid(6): a { b {} --custom-property: value; } 1`] = `

  1 | a { b {} --custom-property: value; }

`;

exports[`invalid(6): a { b {} --custom-property: value; } 2`] = `

Message:
> 1 | a { b {} --custom-property: value; }
    |          ^^^^^^^^^^^^^^^^^^^^^^^^ Do not place declarations after nested rules.

`;

exports[`invalid(7): a { b {} @layer theme; color: red; } 1`] = `

  1 | a { b {} @layer theme; color: red; }

`;

exports[`invalid(7): a { b {} @layer theme; color: red; } 2`] = `

Message:
> 1 | a { b {} @layer theme; color: red; }
    |                        ^^^^^^^^^^ Do not place declarations after nested rules.

`;

exports[`invalid(8): @page { @top-left { content: \"Page\"; } margin: 1cm; } 1`] = `

  1 | @page { @top-left { content: "Page"; } margin: 1cm; }

`;

exports[`invalid(8): @page { @top-left { content: \"Page\"; } margin: 1cm; } 2`] = `

Message:
> 1 | @page { @top-left { content: "Page"; } margin: 1cm; }
    |                                        ^^^^^^^^^^^ Do not place declarations after nested rules.

`;

exports[`invalid(9): a { color: red; b {} background: blue; border: 0; c {} opacity: 1; } 1`] = `

  1 | a { color: red; b {} background: blue; border: 0; c {} opacity: 1; }

`;

exports[`invalid(9): a { color: red; b {} background: blue; border: 0; c {} opacity: 1; } 2`] = `

Message:
> 1 | a { color: red; b {} background: blue; border: 0; c {} opacity: 1; }
    |                      ^^^^^^^^^^^^^^^^ Do not place declarations after nested rules.

`;

exports[`invalid(9): a { color: red; b {} background: blue; border: 0; c {} opacity: 1; } 3`] = `

Message:
> 1 | a { color: red; b {} background: blue; border: 0; c {} opacity: 1; }
    |                                        ^^^^^^^^^ Do not place declarations after nested rules.

`;

exports[`invalid(9): a { color: red; b {} background: blue; border: 0; c {} opacity: 1; } 4`] = `

Message:
> 1 | a { color: red; b {} background: blue; border: 0; c {} opacity: 1; }
    |                                                        ^^^^^^^^^^ Do not place declarations after nested rules.

`;
